attempt to fix slider on safari

--- a/src/app/questionnaire/questionnaire.component.scss
+++ b/src/app/questionnaire/questionnaire.component.scss
@@ -155,6 +155,8 @@ div.container p {
 
 .scoring-filler[type=range]::-webkit-slider-thumb {
     box-shadow: 1000px 0 0 1000px $nav-color;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 div.sendButton {
